--- a/Session5/Task1/style.css
+++ b/Session5/Task1/style.css
@@ -13,7 +13,7 @@
     text-align: center;
 }
 .line{
-    width: 50%;
+    width: 400px;
     height: 0.5px;
     background-color: grey;
     margin: auto;
